<resources>
    <string name="app_name">Cell Consciousness</string>
    <string name="my_special_action">ALSKDJLAKSDJ</string>
    <string name="MSG_STRING">quello che vuoi</string>
    <string name="dialog_fire_missiles">U really want to fare missile?</string>
    <string name="fire">FIRE!!!</string>
    <string name="cancel">CANCEL!!!</string>
    <string name="dialog_fire_title">ALERT :</string>
    <string name="wait">WAIT?</string>
    <string name="TouchDetected">TouchDetected</string>
    <string name="ScreenState">ScreenUnlocked</string>
    <string name="AccelerometerChanged">AccelerometerChanged</string>

    <string name="channelID">My Unique Channel ID</string>

    <string name="navbar_timer">Timer</string>
    <string name="navbar_reminder">Reminder</string>
    <string name="navbar_profile">Profile</string>
    <string name="timer_header_text">Hello!</string>
    <string name="brightness">Brightness</string>
    <string name="spiegazione_brightness">Change your screen brightness according to environment luminosity. We can reminder you if you forget it ;)</string>
    <string name="movement">Movement</string>
    <string name="spiegazione_movement">Please Do not Use cellphone in movement, it\'s risking your life. We can reminder you if you forget it ;)</string>
    <string name="idle_alert">Idle Alert</string>
    <string name="spiegazione_idle_alert">Do not spend too much time idle, every now and then Heads Up and take a break. We can reminder you every 30 minutes if you forget it ;)</string>
    <string name="confirm">Confirm</string>
    <string name="change">Change</string>
    <string name="permission">Permission</string>
    <string name="grant_permission_button">grant permission</string>
    <string name="ask_permission_message">This application needs "DISPLAY OVER APPS" permission in order to work fine. Please click the button, select this app from list and grant the permission :)</string>
    <string name="reminder_autostop_description">To save battery, reminders automatically stop at</string>

</resources>