<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_timer">

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.ProgettoAMIF.UI.timer.TimerFragment"
        android:label="@string/navbar_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_reminder"
        android:name="com.example.ProgettoAMIF.UI.reminder.ReminderFragment"
        android:label="@string/navbar_reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.ProgettoAMIF.UI.profile.ProfileFragment"
        android:label="@string/navbar_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>