<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reminder.ReminderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/navbar_reminder"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        android:background="@drawable/border_light"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/ivIconLight"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:contentDescription="icon"
                android:padding="5dp"
                android:src="@drawable/ic_light" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lyLight"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/brightness"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="(?)"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:checked="true" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MovementChecker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyAccount"
        android:background="@drawable/border_light"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/ivIconMovement"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:contentDescription="icon"
                android:padding="5dp"
                android:src="@drawable/ic_movement" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lyMovement"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/movement"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="(?)"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchMovement"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:checked="true" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/IdlerAlerter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MovementChecker"
        android:background="@drawable/border_light"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/ivIconIdle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:contentDescription="icon"
                android:padding="5dp"
                android:src="@drawable/ic_idle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lyIdle"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/idle_alert"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="(?)"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchIdle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:checked="true" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lySpiegazione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        android:visibility="gone"
        >

        <TextView
                android:id="@+id/spiegazione_titolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightness"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/spiegazione_descrizione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Descrizione di questa funzionalitaaldjlajdlajdlajladjlajdlajdladjlajdljaldjladj ladjlajdlajd ladjlaj ljal jad la jal jdljald jaldj laj lajd laj lja ldjlad jladj laj dljad ljd ljajd laj laj d"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/spiegazione_immagine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_24"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/spiegazione_closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="close" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IdlerAlerter"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="To save battery, reminders automatically stop in this period"
            android:textSize="15sp"
            android:textStyle="normal" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/applyChange"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="Apply"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/reminderStopTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/border_light"
                    android:text="22:00"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="-"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/reminderRestartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/border_light"
                    android:text="08:00"
                    android:textSize="15sp"
                    android:textStyle="normal" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>